# carpe-diem

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pre-commit.yml
carpe_diem/: main.py  markup.py
demo/: cv.css  cv.html  cv.toml  cv_2.toml  my_cv.toml  template.hbs  template_2.hbs
demo/css/: cv.css
src/: args.rs  main.rs
