[tool.poetry]
authors = ["Iven Winkelmann <winkelmann.iven@gmail.com>"]
description = "CV generator written in Python"
license = "MIT"
name = "carpe-diem"
packages = [{include = "carpe_diem"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
